--- a/week01/styles/holygrail.css
+++ b/week01/styles/holygrail.css
@@ -24,7 +24,7 @@ body {
   main {
     background: coral;
     grid-column: 1 / 3;
-    height: 15rem;
+    height: 100vh;
   }
   
   .right-sidebar {
